<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".DetailUser">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_itemAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_itemName"
        style="@style/TextContent.Name"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/img_itemAvatar"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/img_itemAvatar"
        app:layout_constraintTop_toBottomOf="@+id/img_itemAvatar"
        tools:text="@string/Name"/>

    <TextView
        android:id="@+id/tv_itemUsername"
        style="@style/TextContent.Username"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_itemName"
        app:layout_constraintStart_toStartOf="@+id/tv_itemName"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemName"
        tools:text="@string/NamaUser" />


    <TextView
        android:id="@+id/tv_follower"
        style="@style/TextContent.TextView"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemUsername"
        tools:text="@string/Follower" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextContent.TextView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemUsername"
        tools:text="@string/Following" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent.TextView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_location"
        app:layout_constraintStart_toStartOf="@+id/tv_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/Company"/>

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent.TextView"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_following"
        app:layout_constraintStart_toEndOf="@id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_following"
        tools:text="@string/Location" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextContent.TextView"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="@string/Repository" />

</androidx.constraintlayout.widget.ConstraintLayout>